style: add styling to first page

--- a/src/views/shortener.hbs
+++ b/src/views/shortener.hbs
@@ -1,3 +1,5 @@
-<Div>
-  <h3>shorten url</h3>
-</Div>
+<div>
+  <h1 class="shortener__url-title">shorten a url</h1>
+  <input class="shortener__url-input" name="url-input" type="text" placeholder="enter a url">
+  <button class="shortener__url-button">go !</button>
+</div>
