--- a/src/views/shortener.hbs
+++ b/src/views/shortener.hbs
@@ -1,5 +1,7 @@
 <div>
   <h1 class="shortener__url-title">shorten a url</h1>
-  <input class="shortener__url-input" name="url-input" type="text" placeholder="enter a url">
-  <button class="shortener__url-button">go !</button>
+  <form action="/shorten" method="post">
+    <input class="shortener__url-input" name="url" type="text" placeholder="enter a url">
+    <input type="submit" class="shortener__url-button" value="Go !">
+  </form>
 </div>
