--- a/src/views/layouts/index.hbs
+++ b/src/views/layouts/index.hbs
@@ -4,9 +4,77 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="styles.css">
   <title>Document</title>
 </head>
+<style>
+  @import url('https://fonts.googleapis.com/css2?family=Silkscreen:wght@400;700&display=swap');
+  @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@200;300&display=swap');
+
+  body {
+    padding: 0;
+    margin: 0;
+    height: 100vh;
+    width: 100vw;
+    background-color: #FFF602;
+    /* background-color: #08AEEA; */
+    /* background-image: linear-gradient(0deg, #08AEEA 0%, #2AF598 100%); */
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .shortener__url-container {
+    box-sizing: border-box;
+    background-color: white;
+    height: 800px;
+    width: 1400px;
+    box-shadow: -15px 20px 0px 3px rgba(0,0,0,1);
+    padding: 50px 50px 200px 50px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+  }
+
+  .shortener__url-title {
+    font-family: 'Silkscreen', monospace;
+    font-weight: 700;
+    font-size: 80px;
+  }
+
+  .shortener__url-input {
+    font-family: 'Montserrat', sans-serif;
+    box-sizing: border-box;
+    margin-top: 50px;
+    height: 55px;
+    width: 100%;
+    border-radius: 0px;
+    border: 2px solid black;
+    font-weight: 300;
+    font-size: 25px;
+    padding: 4px 10px;
+  }
+
+  .shortener__url-button {
+    box-sizing: border-box;
+    margin: 0px;
+    margin-top: 30px;
+    height: 50px;
+    width: 100%;
+    font-family: 'Silkscreen', monospace;
+    border-radius: 0;
+    background-color: #FFF602;
+    color: black;
+    transition: all .1s;
+    border: 2px solid black;
+    font-size: 25px;
+  }
+
+  .shortener__url-button:hover {
+    cursor: pointer;
+    transform: translateY(-10px);
+    box-shadow: -5px 10px 0px 3px rgba(0,0,0,1);
+  }
+</style>
 <body>
   <div class="shortener__url-container">
   {{{body}}}
