feat: add open in new window

--- a/src/views/layouts/index.hbs
+++ b/src/views/layouts/index.hbs
@@ -51,7 +51,7 @@
     border: 2px solid black;
     font-weight: 300;
     font-size: 25px;
-    padding: 4px 10px;
+    padding: 10px;
   }
 
   .shortener__url-button {
