--- a/src/views/layouts/index.hbs
+++ b/src/views/layouts/index.hbs
@@ -54,6 +54,22 @@
     padding: 10px;
   }
 
+  .shortener__404 {
+    text-align: center;
+  }
+
+  .shortener__404-title {
+    font-family: 'Silkscreen', monospace;
+    font-weight: 700;
+    font-size: 100px;
+  }
+
+  .shortener__url-subtitle {
+    font-family: 'Silkscreen', monospace;
+    font-weight: 400;
+    font-size: 40px;
+  }
+
   .shortener__url-button {
     box-sizing: border-box;
     margin: 0px;
