--- a/src/views/error.hbs
+++ b/src/views/error.hbs
@@ -1,5 +1,5 @@
-<div>
-  <h1 class="shortener__url-title">{{message}}</h1>
-  <h2>{{subtitle}}</h2>
+<div class="shortener__404">
+  <h1 class="shortener__404-title">{{message}}</h1>
+  <h2 class="shortener__url-subtitle">{{subtitle}}</h2>
   <button class="shortener__url-button" onclick="window.location.href='/'">Go Home</button>
 </div>
