--- a/src/views/shortener.hbs
+++ b/src/views/shortener.hbs
@@ -3,6 +3,7 @@
   {{#if shortenedUrl}}
   <div>
     <h3 class="shortener__url-input">http://localhost:3000/{{shortenedUrl}}</h3>
+    {{!-- add on click copy --}}
     <input type="button" class="shortener__url-button" onclick="window.open('http://localhost:3000/{{shortenedUrl}}', '_blank').focus()" value="Go ahead and try it!">
     <input type="button" class="shortener__url-button" onclick="window.location.href='/'" value="Shorten another url">
   </div>
