wip: add delete functionality

--- a/src/views/layouts/index.hbs
+++ b/src/views/layouts/index.hbs
@@ -12,8 +12,8 @@
 
   body {
     padding: 0;
-    margin: 0;
-    height: 100vh;
+    margin: 100px auto;
+    min-height: 100%;
     width: 100vw;
     background-color: #FFF602;
     /* background-color: #08AEEA; */
@@ -26,10 +26,10 @@
   .shortener__url-container {
     box-sizing: border-box;
     background-color: white;
-    height: 800px;
+    min-height: 700px;
     width: 1400px;
     box-shadow: -15px 20px 0px 3px rgba(0,0,0,1);
-    padding: 50px 50px 200px 50px;
+    padding: 50px 50px 50px 50px;
     display: flex;
     flex-direction: column;
     justify-content: space-around;
