--- a/src/views/shortener.hbs
+++ b/src/views/shortener.hbs
@@ -13,7 +13,4 @@
     <input type="submit" class="shortener__url-button" value="Go !">
   </form>
   {{/if}}
-  <form action="/logout" method="post">
-    <input type="submit" class="shortener__url-button" value="log out">
-  </form>
-</div>
+  <input type="button" class="shortener__url-button" onclick="window.location.href='/user-urls'" value="User urls">
