--- a/src/views/layouts/index.hbs
+++ b/src/views/layouts/index.hbs
@@ -85,11 +85,55 @@
     font-size: 25px;
   }
 
-  .shortener__url-button:hover {
+  .shortener__error {
+    font-family: 'Silkscreen', monospace;
+    color: red;
+    width: 100%;
+    height: 20px;
+    font-size: 25px;
+  }
+
+  .shortener__user-url__container {
+    display: flex;
+    width: 100%;
+    margin-bottom: 20px;
+  }
+
+    .shortener__url-button__list {
+    box-sizing: border-box;
+    margin: 0 0 15px 0;
+    height: 55px;
+    width: 100%;
+    font-family: 'Silkscreen', monospace;
+    border-radius: 0;
+    background-color: #FFF602;
+    color: black;
+    transition: all .1s;
+    border: 2px solid black;
+    font-size: 25px;
+  }
+
+    .shortener__url-input__list {
+    font-family: 'Montserrat', sans-serif;
+    box-sizing: border-box;
+    margin: 0 0 15px 0;
+    height: 55px;
+    width: 100%;
+    border-radius: 0px;
+    border: 2px solid black;
+    font-weight: 300;
+    font-size: 25px;
+    padding: 10px;
+    transition: all .1s;
+  }
+
+  .shortener__url-button:hover,
+  .shortener__url-button__list:hover {
     cursor: pointer;
     transform: translateY(-5px);
     box-shadow: -5px 10px 0px 3px rgba(0,0,0,1);
   }
+
 </style>
 <body>
   <div class="shortener__url-container">
