--- a/src/views/user.hbs
+++ b/src/views/user.hbs
@@ -1,44 +1,44 @@
 {{#if urls}}
-  <h1 class="shortener__url-title" style="text-align: center;" id="title">Your saved urls</h1>
+  <h1 class="shortener__url-title_users" id="title">Your saved urls</h1>
 {{else}}
-  <h1 class="shortener__url-title" style="text-align: center;">You don't have any saved urls</h1>
+  <h1 class="shortener__url-title_users">You don't have any saved urls</h1>
 {{/if}}
-<div id="urls-list">
+<ul id="urls-list">
 {{#each urls}}
-  <div id={{id}} class="shortener__user-url__container">
-    <div style="width: 70%; margin-right: 20px;">
-      <h3 class="shortener__url-input__list" id='{{id}}input' style="word-break: break-all; overflow: hidden;">http://localhost:3000/url/{{id}}</h3>
-      <input type="button" class="shortener__url-button__list" onclick="showUrl('{{url}}', '{{id}}')" value="show original url">
+  <li id={{id}} class="shortener__user-url__container">
+    <div>
+      <h3 class="shortener__url-input__list" id='{{id}}input'>http://localhost:3000/url/{{id}}</h3>
+      <input type="button" class="shortener__url-button__list" id="{{id}}show" value="show original url">
     </div>
-    <div style="width: 30%;">
-      <input type="button" id='{{id}}button' class="shortener__url-button__list" onclick="window.open('http://localhost:3000/url/{{id}}', '_blank').focus()" value="visit url">
-      <input type="button" class="shortener__url-button__list" onclick="deleteURL('{{id}}')" value="delete">
+    <div>
+      <input type="button" id='{{id}}redirect' class="shortener__url-button__list" value="visit url">
+      <input type="button" class="shortener__url-button__list" id="{{id}}delete" value="delete">
     </div>
-  </div>
+  </li>
 {{/each}}
-</div>
+</ul>
 {{#if urls}}
-  <input type="button" class="shortener__url-button" id="button" onclick="window.location = '/'" value="home">
-  <input type="button" class="shortener__url-button" onclick="download()" value="download urls">
+  <input type="button" class="shortener__url-button" id="home" value="home">
+  <input type="button" class="shortener__url-button" id="download" value="download urls">
 {{else}}
-  <input type="button" class="shortener__url-button" onclick="window.location = '/'" value="Shorten a url">
+  <input type="button" class="shortener__url-button" id="home" value="Shorten a url">
 {{/if}}
 <form action="/logout" method="post">
   <input type="submit" class="shortener__url-button" value="log out">
 </form>
-<script>
-  function showUrl(url, id) {
+<script nonce={{scriptN}}>
+  function showUrl(id, url) {
     const input = document.getElementById(id+'input')
-    const button = document.getElementById(id+'button')
+    const button = document.getElementById(id+'redirect')
     const shortened = 'http://localhost:3000/url/' + id
 
-    if (input.innerHTML === url) {
-      input.innerHTML = shortened
+    if (input.innerText === url) {
+      input.innerText = shortened
       event.target.value = 'show original url'
       button.style.height = '55px'
       input.style.height = '55px'
     } else {
-      input.innerHTML = url
+      input.innerText = url
       event.target.value = 'show shortened url'
       if (url.length > 64) {
         button.style.height = '110px'
@@ -55,16 +55,14 @@
       document.getElementById(id).remove()
       if (document.getElementById('urls-list').innerText === '') {
         document.getElementById('title').innerHTML = "You don't have any saved urls"
-        document.getElementById('button').value = "Shorten a url"
+        document.getElementById('home').value = "Shorten a url"
       }
     } catch (e) {
       console.log(e)
     }
   }
 
-  function download() {
-    // had to use a handlebars helper to format handlebars variables
-    const data = {{json urls}}
+  function download(data) {
     // change the id attribute to have the complete shortened url
     const transformedData = data.map(obj => {
       const newObj = { shortened: 'http://localhost:3000/url/' + obj.id, url: obj.url }
@@ -95,4 +93,21 @@
     a.remove()
   }
 
+  const listArray = document.querySelectorAll('li')
+  if (listArray.length > 0) {
+    // had to use a handlebars helper to format handlebars variables
+    const urls = {{json urls}}
+    const urlsObj = {}
+    urls.forEach(url => {
+      urlsObj[url.id] = url.url
+    })
+
+    listArray.forEach(element => {
+      document.getElementById(`${element.id}show`).addEventListener('click', () => showUrl(element.id, urlsObj[element.id]))
+      document.getElementById(`${element.id}redirect`).addEventListener('click', () => window.open(`http://localhost:3000/url/${element.id}`, '_blank').focus())
+      document.getElementById(`${element.id}delete`).addEventListener('click', () => deleteURL(element.id))
+    })
+    document.getElementById('download').addEventListener('click', () => download(urls))
+  }
+  document.getElementById('home').addEventListener('click', () => window.location = '/')
 </script>
