fix url length styling

--- a/src/views/user.hbs
+++ b/src/views/user.hbs
@@ -40,7 +40,7 @@
     } else {
       input.innerText = url
       event.target.value = 'show shortened url'
-      if (url.length > 64) {
+      if ((url.length > 50 && window.innerWidth < 1000 ) || url.length > 64) {
         button.style.height = '110px'
         input.style.height = '110px'
       }
