--- a/src/views/layouts/index.hbs
+++ b/src/views/layouts/index.hbs
@@ -53,7 +53,7 @@
     padding: 0;
     margin: 100px auto;
     min-height: 100%;
-    width: 100vw;
+    width: 100%;
     background-color: #FFF602;
     /* background-color: #08AEEA; */
     /* background-image: linear-gradient(0deg, #08AEEA 0%, #2AF598 100%); */
