--- a/src/views/shortener.hbs
+++ b/src/views/shortener.hbs
@@ -5,7 +5,7 @@
     <h3 class="shortener__url-input">{{urlName}}/url/{{shortenedUrl}}</h3>
     {{!-- add on click copy --}}
     <input type="button" class="shortener__url-button" id="url" value="Go ahead and try it!">
-    <input type="button" class="shortener__url-button" id="home" value="Shorten another url">
+    <input type="button" class="shortener__url-button" id="shorten" value="Shorten another url">
   </div>
   {{else}}
   <form action="/shorten" method="post">
@@ -14,6 +14,7 @@
   </form>
   {{/if}}
   <input type="button" class="shortener__url-button" id="user-urls" value="User urls">
+  <input type="button" class="shortener__url-button" id="home" value="return to options page">
   <script nonce={{scriptN}}>
     const shortenedId = {{json shortenedUrl}}
     const urlName = {{json urlName}}
@@ -24,6 +25,8 @@
         return window.open(`${urlName}/url/${shortenedId}`, '_blank').focus()
       } else if (event.currentTarget.id === 'home') {
         direction = '/'
+      } else if (event.currentTarget.id === 'shorten') {
+        direction = '/shorten'
       } else {
         direction = '/user-urls'
       }
@@ -31,7 +34,8 @@
     }
     if (shortenedId) {
       document.getElementById("url").addEventListener("click", redirect, false)
-      document.getElementById("home").addEventListener("click", redirect, false)
+      document.getElementById("shorten").addEventListener("click", redirect, false)
     }
+    document.getElementById("home").addEventListener("click", redirect, false)
     document.getElementById("user-urls").addEventListener("click", redirect, false)
   </script>
