feat: add sso for github and google

--- a/src/views/home.hbs
+++ b/src/views/home.hbs
@@ -4,6 +4,9 @@
     <div class="shortener__options-container">
       <input type="button" class="shortener__url-button" id="shorten" value="Shorten a url">
       <input type="button" class="shortener__url-button" id="store" value="Store a file">
+      <form action="/logout" method="post">
+        <input type="submit" class="shortener__url-button" value="log out">
+      </form>
     </div>
   </div>
 </div>
