--- a/src/views/session.hbs
+++ b/src/views/session.hbs
@@ -10,5 +10,5 @@
   </form>
 </div>
 <script nonce={{scriptN}}>
-  document.getElementById("home").addEventListener("click", () => window.location.href = '/welcome')
+  document.getElementById("home").addEventListener("click", () => window.location.href = '/welcome#start')
 </script>
